--- a/HopIn/src/app/admin-home/admin-home.component.css
+++ b/HopIn/src/app/admin-home/admin-home.component.css
@@ -20,18 +20,26 @@
     width: 60%;
     height: 80%;
     margin: 2% 1% auto auto;
+    border-radius: 10px;
 }
 
 
 
 /* RIGHT SIDE */
-#panicDashboard {
+
+#right {
     width: 35%;
-    height: 80%;
+    height: 100%;
     margin: 2% auto auto 1%;
+}
+
+#panicDashboard {
+    width: 100%;
+    height: 70%;
     border: 1px solid #E6E6E6;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
 }
 
 .title {
@@ -56,6 +64,11 @@ h3 {
 
 
 /* CARDS */
+
+.panics {
+    Overflow-y:scroll;
+    overflow-x: hidden;
+}
 
 p {
     font-size: 0.8rem;
@@ -113,7 +126,7 @@ p {
     margin: auto 0 auto 5px;
 }
 
-.info > div > p {
+.info > .row > p {
     color: #1E4A5A;
 }
 
@@ -127,3 +140,55 @@ p {
     margin-left: 3px;
     margin-right: 3px;
 }
+
+
+/* BOTTOM CARD PART */
+
+.bottom {
+    height: 75px;
+    width: 100%;
+}
+
+.keyValue {
+    display: flex;
+    flex-direction: row;
+ }
+
+ .keyValue > p {
+    padding-right: 0.5em;
+ }
+
+ .key {
+    color: #1E4A5A;
+ }
+
+ .value {
+    color: #92989B;
+ }
+
+ #requests {
+    margin-top: 2%;
+    height: 8%;
+    width: 100%;
+    border: 1px solid #E6E6E6;
+    border-radius: 10px;
+    display: flex;
+ }
+
+ .circle {
+    background-color: green;
+    position: relative;
+    bottom: 15px;
+    margin: 0;
+    padding: 8px 8px 6px 8px;
+    height: 1.2rem;
+    border-radius: 100px;
+    font-size: 0.6rem;
+    color: white;
+    display: none;
+ }
+
+
+ h4 {
+    margin: auto;
+ }
