added current ride when driver is moving to pickup, opens to driver and all passengers in ride

--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.html
@@ -1,9 +1,9 @@
 <div id="card">
     <div id="passIcon">
-        <img class="center" src="../../assets/vectors/passenger.svg">
+        <img class="center" src="../../assets/vectors/passenger.svg" height="50px">
     </div>
     <div id="info">
-        <h4>Passengers who were with you:</h4>
+        <h4>Passengers in ride:</h4>
         <div class="scroll">
             <div id="passengerCard" class="row" *ngFor="let passenger of passengers; let indexOfelement=index;">
                 <div id="profilePic">
