--- a/HopIn/src/app/driver-info-card/driver-info-card.component.css
+++ b/HopIn/src/app/driver-info-card/driver-info-card.component.css
@@ -1,11 +1,12 @@
 #card {
-    width: 37vw;
+    width: 100%;
     height: 20vh;
     display: flex;
     flex-direction: row;
-    border: 2px solid #E6E6E6;
+    border: 1px solid #E6E6E6;
     border-radius: 10px;
     background-color: white;
+    text-align: left;
 }
 
 .row {
