--- a/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
+++ b/HopIn/src/app/passengers-info-card/passengers-info-card.component.css
@@ -1,12 +1,15 @@
 #card {
-    width: 37vw;
-    height: 20vh;
+    width: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: row;
-    border: 2px solid #E6E6E6;
+    border: 1px solid #E6E6E6;
     border-radius: 10px;
     background-color: white;
     margin-top: 3vh;
+    text-align: left;
+    max-height: 37vh;
+    padding: 10px 0px;
 }
 
 .row {
@@ -75,7 +78,7 @@ h4 {
     padding-left: 12px;
     padding-right: 12px;
     background-color: #DCDCDC;
-    height: 100%;
+    /* height: 100%; */
     width: 12%;
     display: flex;
     margin-right: 1em;
