--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -220,6 +220,10 @@ html, body { height: 100%; width: 100%; margin: 0; font-family: "Poppins", sans-
 
  /* COLORS */
 
+ .blue {
+    color: #337D98 !important;
+ }
+
  .dark-blue {
     color: #1E4A5A;
  }
@@ -229,7 +233,7 @@ html, body { height: 100%; width: 100%; margin: 0; font-family: "Poppins", sans-
  }
 
  .dark-gray { 
-    color: #B1B1B1;
+    color: #B1B1B1 !important;
  }
 
  .orange {
