--- a/HopIn/src/app/admin-home/admin-home.component.css
+++ b/HopIn/src/app/admin-home/admin-home.component.css
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    background-color: white;
 }
 
 .title {
@@ -130,6 +131,10 @@ p {
     color: #1E4A5A;
 }
 
+.info > .row > div > p {
+    color: #1E4A5A;
+}
+
 .date {
     color: #DCDCDC;
     font-size: 0.6rem;
@@ -173,6 +178,8 @@ p {
     border: 1px solid #E6E6E6;
     border-radius: 10px;
     display: flex;
+    background-color: white;
+    cursor: pointer;
  }
 
  .circle {
@@ -191,4 +198,35 @@ p {
 
  h4 {
     margin: auto;
+ }
+
+
+ @media screen and (max-width: 1020px) {
+    #mainContainer {
+        flex-direction: column;
+    }
+
+    #map {
+        width: 90%;
+        height: 70%;
+        margin-right: auto;
+    }
+
+    #right {
+        margin: auto;
+        width: 90%;
+        margin-top: 3%;
+    }
+
+    #card {
+        width: 95%;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    .info > .row {
+        flex-direction: column;
+    }
  }
