--- a/HopIn/src/app/admin-home/admin-home.component.html
+++ b/HopIn/src/app/admin-home/admin-home.component.html
@@ -27,8 +27,10 @@
                             <div class="info">
                                 <div class="row">
                                     <p>Marko Maric pressed the</p>
-                                    <p id="smallPanic">PANIC</p>
-                                    <p>button</p>
+                                    <div class="row">
+                                        <p id="smallPanic">PANIC</p>
+                                        <p>button</p>
+                                    </div>
                                 </div>
                                 <p class="date">at 11:09, 23.01.2023.</p>
                             </div>
@@ -50,7 +52,7 @@
                                     <p class="value">K61-A-435</p>
                                 </div>
                                 <div class="keyValue">
-                                    <p class="key">Vehicle model:</p>
+                                    <p class="key">Model:</p>
                                     <p class="value">Ford Mustang</p>
                                 </div>
                             </div>
