--- a/HopIn/src/app/current-ride/current-ride.component.css
+++ b/HopIn/src/app/current-ride/current-ride.component.css
@@ -10,6 +10,47 @@ p {
     margin: 0 !important;
 }
 
+.left-border {
+    border-left: 10px solid #337D98 !important;
+}
+
+.container {
+    display: block !important;
+}
+
+.timer-container {
+    margin: 10px 0px;
+    display: flex !important;
+    align-items: center !important;
+    text-align: left !important;
+    color: #3C474C !important;
+    font-weight: 700;
+    background-color: white;
+    border: 1px solid #E6E6E6;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.mat-icon {
+    transform: scale(1.3);
+    margin-right: 3px;
+}
+
+.timer {
+    font-size: 1.2em;
+    margin-left: 5px;
+}
+
+.full-button {
+    width: 100%;
+    margin-top: 20px;
+    color: white;
+    font-weight: 700;
+    font-size: 1.7em;
+    padding: 10px;
+    letter-spacing: 1px;
+}
+
 .container {
     background-color: white;
     border: 1px solid #E6E6E6;
@@ -31,6 +72,7 @@ p {
 #left-part {
     display: inline-block;
     text-align: center;
+    margin-right: 20px;
 }
 
 #map-container {
@@ -164,6 +206,16 @@ h1 {
 @media screen and (max-width: 1450px) {
     #current-ride-content {
         grid-template-columns: 1fr;
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+
+    .panic-button {
+        margin-bottom: 20px;
+    }
+
+    .left-part {
+        margin-right: 0px;
     }
 }
 
