--- a/HopIn/src/app/current-ride/current-ride.component.html
+++ b/HopIn/src/app/current-ride/current-ride.component.html
@@ -1,10 +1,18 @@
 <div id="current-ride-content">
     <div id="left-part">
-        <div class="container">
+        <div class="container" *ngIf="!started">
             <h1 *ngIf="role=='ROLE_PASSENGER'">Ride <span class="green">accepted</span>!</h1>
             <h1 *ngIf="role=='ROLE_DRIVER'" class="dark-blue">Driving to pickup location</h1>
         </div>
-        <div class="container">
+        <div class="current-ride-timer container" *ngIf="started">
+            <h1>Current ride</h1>
+            <div class="timer-container left-border">
+                <mat-icon class="timer-icon">timer</mat-icon>
+                <cd-timer class="timer" format="hms" #timer></cd-timer>
+            </div>
+           
+        </div>
+        <div class="container" *ngIf="!started">
             <div>
                 <p *ngIf="role=='ROLE_PASSENGER'" class="subtitle dark-gray">driver at pickup in:</p>
                 <p *ngIf="role=='ROLE_DRIVER'" class="subtitle dark-gray">arriving at pickup in:</p>
@@ -13,6 +21,11 @@
         </div>
         <app-driver-info-card *ngIf="role == 'ROLE_PASSENGER'"></app-driver-info-card>
         <app-passengers-info-card *ngIf="ride.passengers.length > 1 || role=='ROLE_DRIVER'"></app-passengers-info-card>
+        <div class="action-buttons" *ngIf="role=='ROLE_DRIVER'">
+            <button *ngIf="atPickup" mat-button class="full-button back-green" (click)="startRide()">Start</button>
+            <button *ngIf="ride.status == 'STARTED'" mat-button class="full-button back-dark-blue" (click)="endRide()">Finish</button>
+        </div>
+        <button mat-button class="panic-button full-button back-red" (click)="panicRide()">PANIC</button>
     </div>
     <map></map>
 </div>
