--- a/HopIn/src/app/ride-review/ride-review.component.css
+++ b/HopIn/src/app/ride-review/ride-review.component.css
@@ -43,7 +43,7 @@
 .leave-comment-container{
     margin-top: -10px;
     width: 400px;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
 }
 
 #stars {
@@ -64,4 +64,8 @@
 
 button {
     margin-top: 5px !important;
+}
+
+.mat-error{
+    margin-top: 10px;
 }
