set admin-home as option for admin in navbar and finished opening this component after admin's login

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
-  <!-- <div id="content">
+  <div id="content">
     <router-outlet></router-outlet>
-  </div> -->
-  <app-admin-home></app-admin-home>
+  </div>
 </div>
