added navigation to the requests page after button click in admin-home

--- a/HopIn/src/app/admin-home/admin-home.component.html
+++ b/HopIn/src/app/admin-home/admin-home.component.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div id="requests">
+        <div id="requests" (click)="openRequests()">
             <h4>Driver account update requests</h4>
             <p class="circle">new</p>
         </div>
