--- a/HopIn/src/app/admin-home/admin-home.component.css
+++ b/HopIn/src/app/admin-home/admin-home.component.css
@@ -184,15 +184,22 @@ p {
 
  .circle {
     background-color: green;
-    position: relative;
-    bottom: 15px;
-    margin: 0;
-    padding: 8px 8px 6px 8px;
+    margin: auto 5px auto auto;
+    padding: 8px 8px 4px 8px;
     height: 1.2rem;
+    width: 20px;
     border-radius: 100px;
     font-size: 0.6rem;
     color: white;
-    display: none;
+    display: block;
+    z-index: 9;
+ }
+
+ .circleOpposite {
+    background-color: white;
+    width: 20px;
+    padding: 8px 8px 4px 8px;
+    margin: auto auto auto 5px;
  }
 
 
