--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -19,7 +19,7 @@
       <div class="navbar-menu" id="open-navbar1">
         <div class="navbar-nav">
             <a *ngIf="role != 'ROLE_ADMIN' && role != null" [routerLink]="['/order-ride']">Home</a>
-            <a *ngIf="role === 'ROLE_ADMIN'" [routerLink]="['/admin-home']">Home</a>
+            <div id="adminHome"><p *ngIf="hasNew">P</p><a *ngIf="role === 'ROLE_ADMIN'" (click)="openAdminHome()">Home</a></div>
             <a (click)="openAccount()" *ngIf="role === 'ROLE_PASSENGER' || role === 'ROLE_DRIVER'">Account</a>
             <a *ngIf="role === 'ROLE_ADMIN'" [routerLink]="['/admin-reports']">Reports</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Drivers</a>
