subscribed to socket topic/panic in toolbar so recent panics wouldn't be lost, and toolbar notifies panic service when panic happens

--- a/HopIn/src/app/admin-home/admin-home.component.html
+++ b/HopIn/src/app/admin-home/admin-home.component.html
@@ -35,6 +35,10 @@
                                         <p>button</p>
                                     </div>
                                 </div>
+                                <div class="keyValue">
+                                    <p class="key">Reason:</p>
+                                    <p class="value">{{panic.reason}}</p>
+                                </div>
                                 <p class="date">{{panic.time}}</p>
                             </div>
                         </div>
