added button for review in history component if user hasn't reviewed ride

--- a/HopIn/src/app/ride-history/ride-history.component.css
+++ b/HopIn/src/app/ride-history/ride-history.component.css
@@ -140,6 +140,15 @@ img {
 
 }
 
+#leave-comment-btn{
+    color: white;
+    font-weight: 400 !important;
+    font-size: 14px;
+    padding: 0px 25px !important;
+    margin-top: 20px !important;
+    margin-right: 10px;
+    border-radius: 5px;
+}
 
 /* ADMIN ROLE */
 /* #adminRideInfo {
