implemented opening dialog from history if not 3 days after the ride

--- a/HopIn/src/app/ride-history/ride-history.component.css
+++ b/HopIn/src/app/ride-history/ride-history.component.css
@@ -140,7 +140,7 @@ img {
 
 }
 
-#leave-comment-btn{
+.leave-comment-btn{
     color: white;
     font-weight: 400 !important;
     font-size: 14px;
@@ -150,6 +150,10 @@ img {
     border-radius: 5px;
 }
 
+.disabled {
+    background-color: #D9D9D9 !important;
+    cursor: not-allowed;
+}
 /* ADMIN ROLE */
 /* #adminRideInfo {
     display: flex;
