--- a/HopIn/src/app/ride-review/ride-review.component.html
+++ b/HopIn/src/app/ride-review/ride-review.component.html
@@ -14,7 +14,7 @@
                 <span class="orange">rating</span>
             </div>
             <div id="stars">
-                <ngx-star-rating [(ngModel)]="driverRating" [ngModelOptions]="{standalone: true}" [id]="'rating'+'1'" [disabled]="false"></ngx-star-rating>
+                <ngx-star-rating [(ngModel)]="driverRating" [ngModelOptions]="{standalone: true}" [id]="'driverrating'" [disabled]="false"></ngx-star-rating>
             </div>
         </div>
         <div class="leave-comment-container">
@@ -32,7 +32,7 @@
                 <span class="orange">rating</span>
             </div>
             <div id="stars">
-                <ngx-star-rating [(ngModel)]="vehicleRating" [ngModelOptions]="{standalone: true}" [id]="'rating'+'2'" [disabled]="false"></ngx-star-rating>
+                <ngx-star-rating [(ngModel)]="vehicleRating" [ngModelOptions]="{standalone: true}" [id]="'vehiclerating'" [disabled]="false"></ngx-star-rating>
             </div>
         </div>
         <div class="leave-comment-container">
