created schedule-dialog for scheduling ride for future if ordering is from history

--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-
+.timepicker-overlay {
+    z-index: 1100 !important;
+  }
+  
+  .timepicker-backdrop-overlay {
+    z-index: 1100 !important;
+  }
+  
 body {
     margin: 0;
     background-color: #F9F9F9;
