--- a/HopIn/src/app/request-feedback/request-feedback.component.html
+++ b/HopIn/src/app/request-feedback/request-feedback.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="right">
-            <p id="date">{{this.date}}</p>
+            <!-- <p id="date">{{this.date}}</p> -->
             <button >Declined</button>
         </div>
     </div>
@@ -33,7 +33,7 @@
             <p>{{ role.toLowerCase() == 'role_admin'? "the": "your" }} request</p>
         </div>
         <div class="right">
-            <p id="date">{{this.date}}</p>
+            <!-- <p id="date">{{this.date}}</p> -->
             <button class="greenBackground">Accepted</button>
         </div>
     </div>
