--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -8,6 +8,7 @@
         <form [formGroup]="personalInfoForm" fxLayout="column">
             <div style="width: 100%">
                 <div class="profile-img-container">
+                    <!-- [src]="profileImgPath" -->
                     <img [src]="profileImgPath" class="profile-img">
                 </div>
                 <div class="name-form-container">
