added reorder option in favourite-routes component

--- a/HopIn/src/app/favourite-routes/favourite-routes.component.html
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.html
@@ -21,7 +21,7 @@
         </div>
         
         <div id="btnAndHeart">
-            <button></button>
+            <button (click)="openDialog(indexOfelement)"></button>
 
             <div *ngIf="this.isFavourite[indexOfelement] === true" (click)="removeRoute(indexOfelement)">                
                 <img class="favourite" src="../../assets/vectors/heart_red.svg">
