--- a/HopIn/src/app/reminder-dialog/reminder-dialog.component.html
+++ b/HopIn/src/app/reminder-dialog/reminder-dialog.component.html
@@ -1,14 +1,14 @@
 <div id="reminder-container">
     <span class="title-span dark-blue">Reminder</span>
-    <span id="ride-reminder-span" class="dark-gray">Your scheduled ride to Jiricekova 1, Novi Sad starts soon!</span>
+    <span id="ride-reminder-span" class="dark-gray">Your scheduled ride to {{ destination }} starts soon!</span>
     
     <div id="time-container">
-        <span class="time-span dark-blue">17:03:20</span>
+        <span class="time-span dark-blue">{{ estimatedTime }}</span>
         <span id="estimated-time-span" class="dark-gray">Estimated time</span>
     </div>
 
     <div>
-        <button class="reminder-btn" mat-raised-button>Close</button>
-        <button class="reminder-btn back-green" mat-raised-button type="submit">Start ride</button>
+        <button class="reminder-btn" mat-raised-button (click)="close()">Close</button>
+        <button *ngIf="role == 'ROLE_DRIVER'" class="reminder-btn back-green" mat-raised-button (click)="start()" type="submit">Start ride</button>
     </div>
 </div>
